fixed some layout problems

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,9 @@ article {
 	padding-bottom: 5px;
 	position: fixed;
 	width: 100%;
+	right: 0;
+	top: 0;
+	left: 0;
 }
 a {
 	color: black;
@@ -26,7 +29,7 @@ a {
 
 body {
 	margin: 0;
-	background-color: grey;
+	/*background-color: grey;*/
 }
 
 
@@ -163,7 +166,9 @@ pre {
 	margin-left: 5px;
 	margin-right: 30px;
 }
-
+.footer:hover span:nth-of-type(2) {
+	color: #e60000;
+}
 #foor {
 	float: right;
 	margin-top: 1px;
@@ -200,4 +205,16 @@ img {
 }
 .footer span:nth-of-type(2) {
 	font-style: bold;
+}
+.main {
+	/*background-color: #993300;*/
+	width: 75%;
+	margin-left: 12.5%;
+	text-align: justify;
+}
+.main article {
+	margin-left: 12.5%;
+	width: 75%;
+	margin-top: 8%;
+	margin-bottom: 3%;
 }
